--- a/src/main/webapp/WEB-INF/pages/main/main.html
+++ b/src/main/webapp/WEB-INF/pages/main/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Main page</title>
 
-    <script src="JavaScript/main.js"></script>
+    <script src="/pages/main/JavaScript/main.js"></script>
 </head>
 <body>
 
