add Foundation framework components

--- a/src/main/webapp/WEB-INF/pages/static/main.html
+++ b/src/main/webapp/WEB-INF/pages/static/main.html
@@ -5,8 +5,20 @@
     <title>Main page</title>
 
     <script src="/pages/static/JavaScript/main.js"></script>
+    <script src="/pages/static/JavaScript/jquery-2.1.3.min.js"></script>
+    <script src="/pages/static/JavaScript/modernizr.js"></script>
+    <script src="/pages/static/JavaScript/foundation.min.js"></script>
+
+    <link rel="stylesheet" href="/pages/static/CSS/foundation.min.css"/>
+    <link rel="stylesheet" href="/pages/static/CSS/normalize.css"/>
+
 </head>
 <body>
+<div class="row">
+    <div class="large-10 large-centered columns">
+        Some text
+    </div>
 
+</div>
 </body>
 </html>
